--- a/src/components/view/tabsStyles.css
+++ b/src/components/view/tabsStyles.css
@@ -62,8 +62,8 @@
     background: #9ac6c9;; 
   }
 
-  .this_week_container {
+  /* .this_week_container {
     width: 100%;
     height: 100%;
     overflow: hidden;
-  }
+  } */
